[build-system]
requires = [ "setuptools>=68.0",]
build-backend = "setuptools.build_meta"

[project]
name = "purplerock-merge"
version = "1.0.0"
description = "Content-addressed version history (git-like DAG) for note vaults, without git"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [ "inotify_simple>=1.3",]

[project.scripts]
purplerock-merge = "purplerock_merge.main:main"

[tool.setuptools]
packages = [ "purplerock_merge",]
